# MetaMagDyn

./: pyproject.toml
src/metamagdyn/: OVF_V2_0.py  __init__.py  analyzer.py  plotters.py  runner.py
src/metamagdyn/MumaxSrc/: Defs_base.mx3  DynamicField_base.mx3  Eq_base.mx3  Modes_base.mx3  Osc_base.mx3  StaticField_base.mx3
tests/: Analyzer.ipynb  Runner.ipynb  Test.mx3
