[project]
name = "metamagdyn"
dynamic = ["version"]
authors = [
  { name="Diego Gonzalez Chavez", email="diegogch@cbpf.com" },
]
description = "FMR simulation and analysis software using MuMax3 and Python."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "file"
path = "src/metamagdyn/__init__.py"

[tool.pdm.build]
package-dir = "src"
excludes =["tests/*"]